# libxtrxll

./: CMakeLists.txt  README.md  libxtrxll.pc.in  mmcm_rom.h  xtrxll_api.c  xtrxll_api.h  xtrxll_base.c  xtrxll_base.h  xtrxll_base_pcie.c  xtrxll_base_pcie.h  xtrxll_flash.c  xtrxll_flash.h  xtrxll_log.c  xtrxll_log.h  xtrxll_mmcm.c  xtrxll_mmcm.h  xtrxll_port.c  xtrxll_port.h  xtrxll_regs.vh
cmake/: Findlibusb3380.cmake
hw/: lp8758.h
mod_pcie/: CMakeLists.txt  xtrxll_pcie_linux.c  xtrxll_pcie_linux.h
mod_usb3380/: CMakeLists.txt  xtrxll_libusb3380.c  xtrxll_libusb3380.h
tests/: CMakeLists.txt  test_xtrxflash.c  test_xtrxll.c
